Adds Web api Interface

--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,25 @@
 
 buildscript {
     repositories {
+        // Add Google's Maven repository.
         google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
+        // Add the Bintray repository
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.2.0'
+        // Add the Google Services plugin (check for v3.1.2 or higher).
+        classpath 'com.google.gms:google-services:4.3.3'
+
+        // Add the Fabric Crashlytics plugin.
+        classpath 'io.fabric.tools:gradle:1.31.2'
+
+        // Add the dependency for the Performance Monitoring plugin
+        classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,9 +29,11 @@ buildscript {
 
 allprojects {
     repositories {
+        // Check that Google's Maven repository is included (if not, add it).
         google()
         jcenter()
-        
+        mavenCentral()
+
     }
 }
 
